# gzweb

./: .eslintrc.js  .gitignore  .hgignore  .jshintrc  CMakeLists.txt  Gruntfile.js  LICENSE  README  README.md  bitbucket-pipelines.yml  coarse_db.sh  deploy.sh  get_local_models.py  karma.conf.js  npm-shrinkwrap.json  package-lock.json  package.json  start_gzweb.sh  stop_gzweb.sh  updateGZ3D.sh  webify_models.py  webify_models_v2.py
.github/workflows/: ci.yaml
examples/: embedded_scene.html  screenshots.html  view_sdf_from_file.html  view_sdf_from_url.html
gz3d/: CMakeLists.txt  README.md  gz3d.html
gz3d/client/: gz3d.html  index.html
gz3d/client/js/include/: ColladaLoader.js  OrbitControls.js  ThreeBackwardsCompatibility.js  TransformControls.js  lodash.js  three.js
gz3d/client/style/: gz3d.css  toolbar.css
gz3d/js/: eventemitter2.js
gz3d/js/include/: gzwebsocket.js
gz3d/src/: gz.js  gzgui.js  gziface.js  gzlogplay.js  gzmanipulator.js  gzobjloader.js  gzogre2json.js  gzradialmenu.js  gzscene.js  gzsdfparser.js  gzsdfviewer_gui.js  gzshaders.js  gzspawnmodel.js
gz3d/test/: gzGui_test.js  gzgui_test.js  gziface_test.js  gzlogplay_test.js  gzogre2json.js  gzogre2json_test.js  gzscene_test.js  gzsdfparser_test.js  sdfviewer_test.js
gz3d/test/fixture/: myfixture.html
gz3d/test/utils/beer/materials/scripts/: bad.material
gz3d/test/utils/house_2/meshes/: house_2.dae
gz3d/utils/: .jshintrc  Gruntfile.js  README.md  package.json
gzbridge/: CMakeLists.txt  ConfigLoader.cc  ConfigLoader.hh  GZNode.cc  GZNode.hh  GZPubSub.cc  GZPubSub.hh  GazeboInterface.cc  GazeboInterface.hh  GazeboPubSub.cc  GazeboPubSub.hh  HttpWebSocketServer.cc  HttpWebSocketServer.hh  OgreMaterialParser.cc  OgreMaterialParser.hh  PubSub.cc  PubSub.hh  WebSocketServer.cc  WebSocketServer.hh  binding.gyp  gzbridge.cc  gzbridge.js  json2pb.cc  msgLocator.js  pb2json.cc  pb2json.hh  pb2json_TEST.cc  run.js  sendPubMsgs.js  server.js  ws_server.js
gzbridge/backup/: GazeboInterface.hh  HttpWebSocketServer.cc
gzbridge/examples/: camera_echo.js  publish.js  save_jpeg.js  subscribe.js
gzbridge/test/: CMakeLists.txt
http/client/: gz3d.js  gz3d.min.js  index.html
http/client/assets/create/meshes/: create_body.dae
http/client/assets/kinect/meshes/: kinect.dae
http/client/assets/pr2/meshes/gripper_v0/: finger_H_UV_100430.dae  finger_tip_H_UV_100430.dae  palm_H_UV_100430.dae
http/client/assets/turtlebot/meshes/: create_body.dae  plate_0_logo.dae  plate_1_logo.dae  plate_2_logo.dae
http/client/js/include/: .ColladaLoader.js.swp  .three.js.swp  ColladaLoader.js  ColladaLoader.js~  ColladaLoader2.min.js  ColladaLoader2.min.js~  roslib.js~
test/: gzscene_test.js  sdf_test.js
tools/: CMakeLists.txt  green.world  gzcoarse.cc  gzthumbnails.sh
